@startuml
' Диаграмма классов театральной системы

' ========== Иерархия сотрудников ==========
class Person {
    +name: str
    +get_age(): int
}

class Staff extends Person {
    +get_salary(): float
}

class Actor extends Staff {
    +role: str
    +attend_repetition(rep: Repetition): bool
    +assign_costume(costume: Costume)
    +play(setting: Setting): str
    +perform_on_stage(stage: Stage, setting: Setting): str
}

class Director extends Staff {
    +direct_setting(setting: Setting)
}

' ========== Постановки и репетиции ==========
class Action {
    +name: str
    +date: datetime
    +durability: float
}

class Setting extends Action {
    +director: Director
    +cast: List[Actor]
    +base_price: float
    +add_cast(actor: Actor)
    +bind_to_hall(hall: AuditoryHall, base_price: float): List[Ticket]
}

class Repetition extends Action {
    +setting: Setting
    +attendance_list: List[Staff]
    +check_list(staff: Staff)
}

' ========== Зал и билеты ==========
class Seat {
    +seat_number: int
    +is_occupied: bool
}

class AuditoryHall {
    +hall_id: str
    +name: str
    +sectors: int
    +rows_per_sector: int
    +seats_per_row: int
    +capacity: int
    +is_seat_available(sector, row, seat): bool
    +occupy_seat(sector, row, seat)
}

class Ticket {
    +ticket_id: str
    +price: float
    +sector: int
    +row: int
    +seat: int
    +is_sold: bool
    +sell_ticket(): bool
}

' ========== Ресурсы ==========
class Stage {
    +name: str
    +capacity: int
    +equipment: List[str]
    +is_available: bool
}

class Costume {
    +name: str
    +size: str
    +color: str
}

class CostumeRoom {
    +name: str
    +costume_ids: List[str]
}

' ========== Менеджеры ==========
class StaffManager {
    +add_staff(staff: Staff)
    +get_staff(): List[Staff]
}

class HallManager {
    +add_hall(hall: AuditoryHall)
    +get_hall_by_id(id: str): AuditoryHall
}

class PerformanceManager {
    +add_setting(setting: Setting)
    +add_repetition(rep: Repetition)
}

class TicketManager {
    +add_ticket(ticket: Ticket)
    +sell_ticket(id: str, hall_manager: HallManager): bool
}

class ResourceManager {
    +hall_manager: HallManager
    +add_stage(stage: Stage)
    +add_costume_room(room: CostumeRoom)
    +add_costume(costume: Costume)
}

' ========== Основной класс ==========
class Theater {
    +name: str
    +staff_manager: StaffManager
    +hall_manager: HallManager
    +performance_manager: PerformanceManager
    +ticket_manager: TicketManager
    +resource_manager: ResourceManager
    
    +add_staff(staff: Staff)
    +add_hall(hall: AuditoryHall)
    +add_setting(setting: Setting)
    +add_repetition(repetition: Repetition)
    +bind_setting_to_hall(setting_name: str, hall_id: str, base_price: float): List[Ticket]
    +sell_ticket(ticket_id: str): bool
    +create_costume(name: str, size: str, color: str): Costume
    +assign_costume_to_actor(costume: Costume, actor: Actor)
    +save_to_file(filepath: str)
    +load_from_file(filepath: str)
}

' ========== Исключения ==========
class TheaterException
class InvalidSeatException extends TheaterException
class TicketNotFoundException extends TheaterException

' ========== Связи ==========
Person <|-- Staff
Staff <|-- Actor
Staff <|-- Director

Action <|-- Setting
Action <|-- Repetition

TheaterException <|-- InvalidSeatException
TheaterException <|-- TicketNotFoundException

Theater *-- StaffManager
Theater *-- HallManager
Theater *-- PerformanceManager
Theater *-- TicketManager
Theater *-- ResourceManager

StaffManager o-- Staff
HallManager o-- AuditoryHall
PerformanceManager o-- Setting
PerformanceManager o-- Repetition
TicketManager o-- Ticket
ResourceManager *-- HallManager
ResourceManager o-- Stage
ResourceManager o-- Costume
ResourceManager o-- CostumeRoom

AuditoryHall o-- Seat
Setting --> Director
Setting --> Actor
Setting o-- Ticket
Repetition --> Setting
Repetition --> Staff
Ticket --> Setting
Ticket --> AuditoryHall
Actor o-- Costume
Director --> Setting

@enduml
